email works, so now onto sales report and we finish this thing

--- a/secrets.env
+++ b/secrets.env
@@ -6,3 +6,5 @@ PESAPAL_CONSUMER_KEY = KHyCbxCmYCzi6OG/UnK0dZFc+T16NzJ1
 PESAPAL_CONSUMER_SECRET = WU+ubs2hxYDpWHPx5BlOALtlFCI=
 
 
+EMAIL_USER=hello.kaziq@gmail.com
+EMAIL_PASS=adasohzikwphsont
